<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="wrap_content"
        android:id="@+id/refreshProfile"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_profile"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.pbpkelompok3.shopping.ui.profile.profileFragment">

            <TextView
                android:id="@+id/my_profile"
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:gravity="center"
                android:text="@string/my_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

    <!--        <de.hdodenhof.circleimageview.CircleImageView-->
    <!--            android:id="@+id/profile_photo"-->
    <!--            android:layout_width="113dp"-->
    <!--            android:layout_height="113dp"-->
    <!--            android:layout_marginStart="0dp"-->
    <!--            android:layout_marginTop="16dp"-->
    <!--            android:src="@drawable/ic_baseline_account_circle_24"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@id/my_profile" />-->

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="00dp"
                android:gravity="center_horizontal"
                android:layout_marginTop="72dp"
                android:text="first name"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="@id/my_profile"
                app:layout_constraintHorizontal_bias="0.578"
                app:layout_constraintStart_toStartOf="@id/my_profile"
                app:layout_constraintTop_toBottomOf="@id/my_profile" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:text="last name"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_first" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_last"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:textSize="22sp"
                android:text="@string/email" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/profile_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_email"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:textSize="22sp"
                android:text="@string/phone_number" />

            <FrameLayout
                android:id="@+id/btn_editProfile_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_phone"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_editProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_profile" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/btn_logout_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_editProfile_layout"
                app:layout_constraintStart_toStartOf="@+id/btn_editProfile_layout"
                app:layout_constraintTop_toBottomOf="@id/btn_editProfile_layout">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#ED2B2A"
                    android:text="@string/logout" />
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</ScrollView>